--- a/index.html
+++ b/index.html
@@ -11,22 +11,32 @@
 
 <body
   class="bg-[url('./Assets/weatherbg2.jpeg')] flex items-center justify-center repeat-none m-4 bg-center bg-opacity-1000 backdrop-blur-[2px] h-screen">
-  <div class="w-full max-w-[680px] bg-white rounded-xl shadow-xl p-6">
-    <h2 class="text-4xl font-bold text-blue-800 mb-4 text-center">Weather App</h2>
-    <form id="weatherForm" class="flex gap-2 mb-4">
-      <input type="text" id="cityInput"
-        class="flex-1 px-3 py-2 rounded border border-gray-300 focus:outline-none focus:ring focus:border-blue-400"
-        placeholder="Enter city" required>
-      <button type="submit"
-        class="bg-[linear-gradient(to_top,_#6600ff_5%,_#6600ff_100%)] hover:bg-blue-700 text-white px-4 py-2 rounded font-semibold">Get
-        Weather</button>
-      <button type="button" id="geoBtn"
-        class="bg-gray-200 hover:bg-blue-100 text-blue-700 px-3 py-2 rounded font-semibold">📍</button>
-    </form>
-    <div id="weatherResult" class="mb-4 text-center"></div>
-    <div id="forecast"></div>
-  </div>
+  <div class="w-full max-w-[680px] bg-white rounded-xl shadow-xl p-4 sm:p-6 mx-2 sm:mx-auto">
 
+    <div class="flex mt-[10px] sm:mt-[20px] mb-[px] sm:mb-[px] float-right text-right">
+      <div id="userDisplay" class="mb-2 sm:mb-4 text-right text-base sm:text-lg font-semibold text-blue-800"></div>
+      <!-- <select name="location" id="" class="mb-[20px] sm:mb-[30px]">
+        <option value="username" id="" class="text-blue-800"></option>
+        <option value="logout" id="logout">Logout</option>
+      </select> -->
+    </div>
+    <div class="mt-[70px] sm:mt-[100px] mb-[20px] sm:mb-[30px]">
+      <h2 class="text-2xl sm:text-4xl font-bold text-blue-800 mb-2 sm:mb-4 text-center">Weather App</h2>
+      <form id="weatherForm" class="flex flex-col sm:flex-row gap-2 mb-2 sm:mb-4">
+        <input type="text" id="cityInput"
+          class="flex-1 px-2 sm:px-3 py-2 rounded border border-gray-500 focus:outline-none focus:ring focus:border-blue-400 text-base sm:text-lg"
+          placeholder="Enter city" required>
+        <button type="submit"
+          class="bg-[linear-gradient(to_top,_#6600ff_5%,_#6600ff_100%)] hover:bg-blue-700 text-white px-3 sm:px-4 py-2 rounded font-semibold text-base sm:text-lg">Get
+          Weather</button>
+        <button type="button" id="geoBtn"
+          class="bg-gray-200 hover:bg-blue-200 text-blue-700 px-2 sm:px-3 py-2 rounded font-semibold text-base sm:text-lg">By
+          Location🌍</button>
+      </form>
+      <div id="weatherResult" class="mb-2 sm:mb-4 text-center"></div>
+      <div id="forecast"></div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
