--- a/dashboard.html
+++ b/dashboard.html
@@ -15,10 +15,7 @@
 
     <div class="flex mt-[10px] sm:mt-[20px] mb-[px] sm:mb-[px] float-right text-right">
       <div id="userDisplay" class="mb-2 sm:mb-4 text-right text-base sm:text-lg font-semibold text-blue-800"></div>
-      <select name="location" id="" class="mb-[20px] sm:mb-[30px]">
-        <option value="username" id="" class="text-blue-800"></option>
-        <option value="logout" id="logout">Logout</option>
-      </select>
+      <button id="logout" class="px-4 py-2 bg-red-600 text-white rounded">Logout</button>
     </div>
     <div class="mt-[70px] sm:mt-[100px] mb-[20px] sm:mb-[30px]">
       <h2 class="text-2xl sm:text-4xl font-bold text-blue-800 mb-2 sm:mb-4 text-center">Weather App</h2>
