--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
   class="bg-[url('./Assets/weatherbg2.jpeg')] flex items-center justify-center repeat-none m-4 bg-center bg-opacity-1000 backdrop-blur-[2px] h-screen">
   <div class="w-full max-w-[680px] bg-white rounded-xl shadow-xl p-4 sm:p-6 mx-2 sm:mx-auto">
 
-    <div class="flex mt-[10px] sm:mt-[20px] mb-[px] sm:mb-[px] float-right text-right">
+    <div class="flex mt-[10px] sm:mt-[20px] mb-[px] sm:mb-[px] justify-between items-center">
       <div id="userDisplay" class="mb-2 sm:mb-4 text-right text-base sm:text-lg font-semibold text-blue-800"></div>
       <button id="logout" class="px-4 py-2 bg-red-600 text-white rounded">Logout</button>
     </div>
