--- a/dashboard.html
+++ b/dashboard.html
@@ -27,8 +27,7 @@
           class="bg-[linear-gradient(to_top,_#6600ff_5%,_#6600ff_100%)] hover:bg-blue-700 text-white px-3 sm:px-4 py-2 rounded font-semibold text-base sm:text-lg">Get
           Weather</button>
         <button type="button" id="geoBtn"
-          class="bg-gray-200 hover:bg-blue-200 text-blue-700 px-2 sm:px-3 py-2 rounded font-semibold text-base sm:text-lg">By
-          Location🌍</button>
+          class="bg-gray-200 hover:bg-blue-200 text-blue-700 px-2 sm:px-3 py-2 rounded font-semibold text-base sm:text-lg">Location🌍</button>
       </form>
       <div id="weatherResult" class="mb-2 sm:mb-4 text-center"></div>
       <div id="forecast"></div>
