--- a/dashboard.html
+++ b/dashboard.html
@@ -14,10 +14,13 @@
   <div class="w-full max-w-[680px] bg-white rounded-xl shadow-xl p-4 sm:p-6 mx-2 sm:mx-auto">
 
     <div class="flex mt-[10px] sm:mt-[20px] mb-[px] sm:mb-[px] justify-between items-center">
-      <div id="userDisplay" class="mb-2 sm:mb-4 text-right text-base sm:text-lg font-semibold text-blue-800"></div>
+      <div>
+        <div id="userDisplay" class="mb-2 sm:mb-2 text-xl sm:text-xl font-semibold text-blue-800"></div>
+      <p id="greeting" class="text-blue-800 text-xl sm:text-xl font-semibold mt-"></p>
+      </div>
       <button id="logout" class="px-4 py-2 bg-red-600 text-white rounded">Logout</button>
     </div>
-    <div class="mt-[70px] sm:mt-[100px] mb-[20px] sm:mb-[30px]">
+    <div class="mt-[60px] sm:mt-[80px] mb-[15px] sm:mb-[20px]">
       <h2 class="text-2xl sm:text-4xl font-bold text-blue-800 mb-2 sm:mb-4 text-center">Weather App</h2>
       <form id="weatherForm" class="flex flex-col sm:flex-row gap-2 mb-2 sm:mb-4">
         <input type="text" id="cityInput"
